<resources>
    <string name="app_name">M-Bora</string>

    <string name="sign_up_to_access_our_services">Sign up to access our services</string>
    <string name="fullname">fullname</string>
    <string name="id_no">id_No</string>
    <string name="Username">username</string>
    <string name="password">password</string>
    <string name="kra_pin">kra_pin</string>
    <string name="phone_no">phone No</string>
    <string name="click_to_login">click to login</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="m_bora">M-BORA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name">navigation drawer</string>
    <string name="open_nav">open navigation drawer</string>
    <string name="close_nav">close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="wallet">wallet</string>
    <string name="verify">verify</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="refresh">Refresh</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="making_the_future_golden">Making the future golden</string>
    <string name="contact_us_mbora_gmail_com">contact us mbora@gmail.com</string>
    <string name="android_knowledge">Android Knowledge</string>
    <string name="contact_androidknowledge_com">contact@androidknowledge.com</string>
    <string name="navigation_header">navigation_header</string>
    <string name="nav_header_subtitle" />
    <string name="nav_header_title" />
    <string name="nav_header_desc" />
    <string name="title_activity_services">services</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_wallet">wallet</string>
    <string name="title_activity_services2">Services2</string>
    <string name="welcome" />
    <string name="wal" />
    <string name="menu_verification" />
</resources>