<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
        android:id="@+id/nav_wallet"
        android:icon="@drawable/account_balance_wallet"
        android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_verification"
            android:icon="@drawable/ic_baseline_verified_24"
            android:title="@string/menu_verification" />

    </group>
</menu>