<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_Wallet">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.m_bora.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_Wallet"
        android:name="com.example.m_bora.ui.wallet.WalletFragment"
        android:label="@string/menu_wallet"
        tools:layout="@layout/fragment_wallet" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.m_bora.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.m_bora.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_verification"
        android:name="com.example.m_bora.ui.verification.verificationFragment"
        android:label="@string/menu_verification"
        tools:layout="@layout/fragment_verification" />
</navigation>